--- a/src/app/pages/ncs/create/ncs-create-stepper/ncs-create-stepper.component.html
+++ b/src/app/pages/ncs/create/ncs-create-stepper/ncs-create-stepper.component.html
@@ -44,7 +44,7 @@
       </div>
     </div>
   </div>
-  <div class="content-create-nc">
+  <div class="content-create-nc" #divToScroll>
     <div *ngIf="stepPosition === 0">
       <app-identificacao-da-nc></app-identificacao-da-nc>
       <div class="d-flex flex-row flex-wrap">
