--- a/src/app/pages/ncs/sgq-evaluation/sgq-stepper/sgq-stepper.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/sgq-stepper/sgq-stepper.component.html
@@ -34,7 +34,7 @@
       </div>
     </div>
   </div>
-  <div class="content-create-nc">
+  <div class="content-create-nc" #divToScroll>
     <div *ngIf="stepPosition === 0">
       <app-reoccurrence></app-reoccurrence>
       <div class="mt-5">
