--- a/src/app/pages/ncs/create/steps/step2/checkpoint/checkpoint-items/checkpoint-items.component.html
+++ b/src/app/pages/ncs/create/steps/step2/checkpoint/checkpoint-items/checkpoint-items.component.html
@@ -11,7 +11,7 @@
 </div>
 
 <div *ngIf="returnNfScreen()">
-  <label for="NumOp">{{'newNC.step1.checkpoint.numb'| translate}}</label>
+  <label for="NumOp">{{getString()}}</label>
   <input
     [(ngModel)]="nonComplicanceService.nc.num_nota"
     name="NumOp"
