--- a/src/app/pages/ncs/sgq-evaluation/sgq-header/sgq-header.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/sgq-header/sgq-header.component.html
@@ -25,7 +25,7 @@
         {{ "global.cancel" | translate }}
         <i class="pi pi-times"></i>
       </button>
-      <button type="button" class="btn btn-dark mr-2" style="background-color: #00344D;" disabled>
+      <button type="button" class="btn btn-dark mr-2" style="background-color: #00344D;" (click)="openDados()">
         {{ "global.ncData" | translate }}
         <i class="bi bi-file-earmark-medical"></i>
       </button>
