--- a/src/app/pages/ncs/create/ncs-create-stepper/ncs-create-stepper.component.html
+++ b/src/app/pages/ncs/create/ncs-create-stepper/ncs-create-stepper.component.html
@@ -48,10 +48,10 @@
     <div *ngIf="stepPosition === 0">
       <app-identificacao-da-nc></app-identificacao-da-nc>
       <div class="d-flex flex-row flex-wrap">
-        <div class="col-xl-6">
+        <div class="col-xl-6 pl-0 pr-0 pr-xl-3">
           <app-parceiro></app-parceiro>
         </div>
-        <div class="col-xl-6">
+        <div class="col-xl-6 pr-0 pl-0 pl-xl-3 mt-3 mt-xl-0 ">
           <app-product></app-product>
         </div>
       </div>
