--- a/src/app/pages/ncs/create/steps/step2/product/product-info/product-info.component.css
+++ b/src/app/pages/ncs/create/steps/step2/product/product-info/product-info.component.css
@@ -6,18 +6,17 @@
 .product-box {
   background: #fff;
   border-radius: 8px;
-  margin-inline: 8px;
-  margin-bottom: 8px;
+  margin: 8px;
 }
 .product-info h4 {
   margin-left: 8px;
   font-weight: 500;
 }
-.product-info h5 {
+.product-info h1 {
   font-weight: 800;
 }
 .product-info h4,
-.product-info h5 {
+.product-info h1 {
   font-size: 20px;
   line-height: 33px;
   margin-bottom: 0;
