--- a/src/app/pages/ncs/create/steps/step2/product/product-info/product-info.component.html
+++ b/src/app/pages/ncs/create/steps/step2/product/product-info/product-info.component.html
@@ -1,14 +1,14 @@
-<div *ngIf="!nonComplianceService.hasProduct()" class="mt-1">
+<div *ngIf="!nonComplianceService.hasProduct()">
   <app-waiting-product
     titleFigure="Aguardando dados do produto"
     [isImg1]="false"
   ></app-waiting-product>
 </div>
 <div *ngIf="nonComplianceService.hasProduct()">
-  <div class="product-info mt-1">
-    <div class="product-box p-2 mt-3">
+  <div class="product-info mt-2">
+    <div class="product-box p-2">
       <div class="title-box d-flex justify-content-between">
-        <h5>{{ nonComplianceService.nc.product.name }}</h5>
+        <h1>{{ nonComplianceService.nc.product.name }}</h1>
         <div class="id-box ml-2 d-flex align-items-center">
           <i class="pi pi-ticket mr-2"></i>
           <span>{{ nonComplianceService.nc.product.code }}</span>
@@ -18,7 +18,7 @@
         {{ nonComplianceService.nc.product.description }}
       </p>
     </div>
-    <div class="d-flex flex-column my-3 product-box p-3">
+    <div class="d-flex flex-column product-box p-3">
       <div class="d-flex ">
         <div class="d-flex flex-column inputs-sm mt-3 col-6">
           <label for="amountNC"
