--- a/src/app/pages/ncs/create/steps/step2/product/product.component.html
+++ b/src/app/pages/ncs/create/steps/step2/product/product.component.html
@@ -1,7 +1,7 @@
 <div class="header">
   
-  <div class="d-flex flex-row m-0">
-    <div class="cabecalho text-box p-0 mr-3">
+  <div class="d-flex flex-row m-0 justify-content-between">
+    <div class="cabecalho text-box p-0 mr-3 ">
       <h1>{{ "newNC.step1.product.title" | translate }} *</h1>
       <p>
         {{ "newNC.step1.product.subtitle1" | translate }}
@@ -22,7 +22,7 @@
     </div>
   </div>
 </div>
-<div class="form-check mt-0">
+<div class="form-check mb-0">
   <input
     class="form-check-input"
     type="checkbox"
@@ -33,7 +33,7 @@
   />
   <label class="form-check-label" for="flexCheckDefault"> Não Se Aplica </label>
 </div>
-<div class="p-fluid autoComplete mt-0 mb-2" style="margin-top: 20px">
+<div class="p-fluid autoComplete mb-2">
   <p-autoComplete
     [(ngModel)]="nonComplicanceService.autoCompleteValue"
     [suggestions]="results"
