--- a/src/app/pages/ncs/create-prop/steps/step1/ishikawa-dialog/ishikawa-dialog.component.css
+++ b/src/app/pages/ncs/create-prop/steps/step1/ishikawa-dialog/ishikawa-dialog.component.css
@@ -20,3 +20,6 @@ label {
     font-size: 13px;
     font-weight: bold;
 }
+:host ::ng-deep .removeHeader .ql-toolbar.ql-snow {
+    display: none;
+}
