--- a/src/app/pages/ncs/create-prop/steps/step1/ishikawa-dialog/ishikawa-dialog.component.html
+++ b/src/app/pages/ncs/create-prop/steps/step1/ishikawa-dialog/ishikawa-dialog.component.html
@@ -263,7 +263,7 @@
         
         <p-divider layout="horizontal"></p-divider>
 
-        <div>
+        <div class="removeHeader">
             <h2 class="mr-2">
               <i class="bi bi-file-earmark-text"></i>
                 {{'about.ncView.description'| translate}}
