--- a/src/app/pages/ncs/create/steps/step4/revisar-info.component.css
+++ b/src/app/pages/ncs/create/steps/step4/revisar-info.component.css
@@ -141,3 +141,11 @@ h2{
   font-size:24px;
 }
 
+.selected-btn {
+  background-color: #00344D;
+  color: #fff;
+}
+.unselected-btn {
+  border-color: #00344D;
+  color:#00344D;
+}
