--- a/src/app/pages/dialogs/fechamento-dialog/fechamento-dialog.component.css
+++ b/src/app/pages/dialogs/fechamento-dialog/fechamento-dialog.component.css
@@ -25,3 +25,13 @@ font-size: 15px;
     display: flex;
     align-items: center;
 }
+.cancel-btn {
+    border: 2px solid  #B48C28;
+    border-radius: 0.25rem;
+    color: #B48C28;
+    height: 35px;
+  }
+.cancel-btn:hover {
+    color: #fff;
+    background:#B48C28;
+}
