--- a/src/app/pages/dialogs/fechamento-dialog/fechamento-dialog.component.html
+++ b/src/app/pages/dialogs/fechamento-dialog/fechamento-dialog.component.html
@@ -25,7 +25,7 @@
 <div class="mb-2"><span class="question-information">{{'closeNC.info'| translate}}</span></div>
 <p-editor [style]="{ height: '200px' }" [(ngModel)]="editorValue" class="p-editor"></p-editor>
 <div class="d-flex flex-row justify-content-end button-bar mt-3">
-    <button class="btn btn-outline-warning mr-4" (click)="close()">{{'global.cancel'| translate}}</button>
+    <button class="btn cancel-btn mr-4" (click)="close()">{{'global.cancel'| translate}}</button>
     <button class="btn btn-primary" (click)="save()">{{'closeNC.confirm'| translate}}</button>
 </div>
 
