--- a/src/app/pages/ncs/about/costs/costs.component.css
+++ b/src/app/pages/ncs/about/costs/costs.component.css
@@ -116,3 +116,13 @@ label {
     opacity: 0;
     z-index: 3;
 }
+.cancel-btn {
+    border: 2px solid  #B48C28;
+    border-radius: 0.25rem;
+    color: #B48C28;
+    height: 35px;
+  }
+.cancel-btn:hover {
+    color: #fff;
+    background:#B48C28;
+}
