--- a/src/app/pages/ncs/create-prop/steps/step1/ishikawa-dialog/ishikawa-dialog.component.html
+++ b/src/app/pages/ncs/create-prop/steps/step1/ishikawa-dialog/ishikawa-dialog.component.html
@@ -278,7 +278,7 @@
 </div>
 <div class="d-flex justify-content-between mt-5">
     <button type="button"
-            class="btn btn-outline-warning"
+            class="btn cancel-btn"
             (click)="close()"
     >
         {{'createProp.step1.back'| translate}}
