--- a/src/app/pages/ncs/create-prop/steps/step3/action-plan-dialog/action-plan-dialog.component.css
+++ b/src/app/pages/ncs/create-prop/steps/step3/action-plan-dialog/action-plan-dialog.component.css
@@ -13,3 +13,13 @@ label {
     position: relative;
     top: -12px;
 }
+.cancel-btn {
+    border: 2px solid  #B48C28;
+    border-radius: 0.25rem;
+    color: #B48C28;
+    height: 35px;
+  }
+.cancel-btn:hover {
+    color: #fff;
+    background:#B48C28;
+}
