--- a/src/app/pages/ncs/create-prop/steps/step3/action-plan.component.css
+++ b/src/app/pages/ncs/create-prop/steps/step3/action-plan.component.css
@@ -35,3 +35,13 @@ label {
 .flex>div:first-child {
     flex: 0 1 100%;
 }
+.cancel-btn {
+    border: 2px solid  #B48C28;
+    border-radius: 0.25rem;
+    color: #B48C28;
+    height: 35px;
+  }
+.cancel-btn:hover {
+    color: #fff;
+    background:#B48C28;
+}
