--- a/src/app/pages/ncs/create-prop/steps/step4/notification.component.html
+++ b/src/app/pages/ncs/create-prop/steps/step4/notification.component.html
@@ -137,7 +137,7 @@
     <div class="d-flex justify-content-end">
       <button
         type="button"
-        class="btn btn-outline-warning"
+        class="btn cancel-btn"
         (click)="hideAddContacts()"
       >
         {{'global.cancel'| translate}}
