--- a/src/app/pages/ncs/create/ncs-create-header/cancel-dialog/cancel-dialog.component.css
+++ b/src/app/pages/ncs/create/ncs-create-header/cancel-dialog/cancel-dialog.component.css
@@ -1,3 +1,13 @@
 button{
     width: 160px;
 }
+.cancel-btn {
+    border: 2px solid  #B48C28;
+    border-radius: 0.25rem;
+    color: #B48C28;
+    height: 35px;
+  }
+.cancel-btn:hover {
+    color: #fff;
+    background:#B48C28;
+}
