--- a/src/app/pages/ncs/create/steps/step1/parceiro/parceiro.component.css
+++ b/src/app/pages/ncs/create/steps/step1/parceiro/parceiro.component.css
@@ -247,3 +247,13 @@ label {
   font-size: 12px;
   margin-left: 5px;
 }
+.cancel-btn {
+  border: 2px solid  #B48C28;
+  border-radius: 0.25rem;
+  color: #B48C28;
+  height: 35px;
+}
+.cancel-btn:hover {
+  color: #fff;
+  background:#B48C28;
+}
