--- a/src/app/pages/ncs/create/steps/step1/parceiro/parceiro.component.html
+++ b/src/app/pages/ncs/create/steps/step1/parceiro/parceiro.component.html
@@ -19,7 +19,7 @@
     <input type="text" [(ngModel)]="nonComplicanceService.editarEmailItem" />
   </div>
   <div class="d-flex justify-content-end editar-buttons">
-    <button type="button" class="btn btn-outline-warning" (click)="hideDialog()">
+    <button type="button" class="btn cancel-btn" (click)="hideDialog()">
       {{ "global.cancel" | translate }}
     </button>
     <div class="ml-2 mr-2"></div>
