--- a/src/app/pages/ncs/create/steps/step3/contact-dialog/contact-dialog.component.html
+++ b/src/app/pages/ncs/create/steps/step3/contact-dialog/contact-dialog.component.html
@@ -43,7 +43,7 @@
 </div>
 <div class="d-flex justify-content-end editar-buttons">
     <button type="button"
-            class="btn btn-outline-warning"
+            class="btn cancel-btn"
             (click)="cancel()">
         {{'global.cancel'| translate}}
     </button>
