--- a/src/app/pages/ncs/create/steps/step3/contacts.component.html
+++ b/src/app/pages/ncs/create/steps/step3/contacts.component.html
@@ -143,7 +143,7 @@
     <div class="d-flex justify-content-end">
       <button
         type="button"
-        class="btn btn-outline-warning"
+        class="btn cancel-btn"
         (click)="hideAddContacts()"
       >
         {{'global.cancel'| translate}}
@@ -163,7 +163,7 @@
 
 <p-confirmDialog #cd [style]="{ width: '50vw' }">
   <ng-template pTemplate="footer">
-    <button type="button" class="btn btn-outline-warning" (click)="cd.reject()">
+    <button type="button" class="btn cancel-btn" (click)="cd.reject()">
       {{'global.reject'| translate}}
     </button>
     <button type="button" class="btn btn-dark" style="background-color: #00344D;" (click)="cd.accept()">
