--- a/src/app/pages/ncs/sgq-evaluation/sgq-header/sgq-header.component.css
+++ b/src/app/pages/ncs/sgq-evaluation/sgq-header/sgq-header.component.css
@@ -67,3 +67,13 @@ h2 {
     border: 2px solid #333333;
     border-radius: 8px;
 }
+.cancel-btn {
+    border: 2px solid  #B48C28;
+    border-radius: 0.25rem;
+    color: #B48C28;
+    height: 35px;
+  }
+.cancel-btn:hover {
+    color: #fff;
+    background:#B48C28;
+}
