--- a/src/app/pages/ncs/sgq-evaluation/sgq-header/sgq-header.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/sgq-header/sgq-header.component.html
@@ -21,7 +21,7 @@
   </div>
   <div class="d-flex justify-content-end p-0">
     <div class="d-flex buttons">
-      <button type="button" class="btn btn-outline-warning mr-2">
+      <button type="button" class="btn cancel-btn mr-2">
         {{ "global.cancel" | translate }}
         <i class="pi pi-times"></i>
       </button>
