--- a/src/app/pages/ncs/sgq-evaluation/steps/notifications/notifications.component.css
+++ b/src/app/pages/ncs/sgq-evaluation/steps/notifications/notifications.component.css
@@ -66,3 +66,13 @@ label {
     border-radius: 5px;
     border: 2px solid rgb(51, 51, 51);
 }
+.cancel-btn {
+    border: 2px solid  #B48C28;
+    border-radius: 0.25rem;
+    color: #B48C28;
+    height: 35px;
+  }
+.cancel-btn:hover {
+    color: #fff;
+    background:#B48C28;
+}
