Atividades relacionadas: Nas informações da NC, o número da op, pc,pc,cc e nf-e está aparecendo mas está sem título. Além disso deve ser posicionado em linha; No plano de ação não deve ser permitido a inserção de data de prazo de uma ação menor que o dia atual.; Ao remover uma reincidencia a mensagem que deve aparecer é "Reincidência removida com sucessa" e a cor deve ser verde e não azul; Tela de Fechamento já está abrindo com o box “Sim” marcado. Deve abrir com o botão Fechar desabilitado.

--- a/src/app/pages/ncs/create-prop/steps/step3/action-plan.component.html
+++ b/src/app/pages/ncs/create-prop/steps/step3/action-plan.component.html
@@ -30,13 +30,14 @@
 
         <div class="d-flex flex-column mr-lg-3 inputs-sm my-auto">
             <label>{{'global.deadline'| translate}}</label>
-            <input
+            <!--<input
                     type="date"
                     pInputText
                     id="date-input"
                     class="p-input text-sm input"
                     [(ngModel)]="date"
-            />
+            />-->
+            <p-calendar class="p-input text-sm input" [(ngModel)]="date" [minDate]="minDate" placeholder="dd/mm/yy"></p-calendar>
         </div>
         <div class="d-flex flex-column mr-lg-3 inputs-sm my-auto">
             <label>{{'global.status'| translate}}</label>
