--- a/src/app/pages/ncs/create/steps/step4/products-and-points/products-and-points.component.html
+++ b/src/app/pages/ncs/create/steps/step4/products-and-points/products-and-points.component.html
@@ -69,7 +69,10 @@
       <div
               class="d-flex flex-row ml-5"
               *ngIf="this.nonComplicanceService.nc?.tipo_controle != 'PR'"
-      ><span class="info-titulo">{{("global.number" | translate) + ": "+(returnNumber())}}</span></div>
+      >
+        <i class="bi bi-calculator"></i>
+        <span class="info-titulo">{{("global.number" | translate) + ": "+(returnNumber())}}</span>
+      </div>
       <div class="d-flex flex-row mt-2">
         <span class="info-dados">{{
           this.nonComplicanceService.nc?.procedure?.code || ""
